--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-	"name": "metro-transit",
-	"version": "1.0.0",
-	"main": "gulpfile.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mtbotherd/Redesign2019.git"
-	},
-	"author": "Rich Bothe",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/mtbotherd/Redesign2019.git/issues"
-	},
-	"homepage": "https://github.com/mtbotherd/Redesign2019.git#readme",
-	"devDependencies": {
-		"browser-sync": "^2.26.3",
-		"del": "^3.0.0",
-		"exlink": "^2.3.0",
-		"gulp": "^3.9.1",
-		"gulp-autoprefixer": "^5.0.0",
-		"gulp-cache": "^1.0.2",
-		"gulp-cssnano": "^2.1.3",
-		"gulp-if": "^2.0.2",
-		"gulp-imagemin": "^5.0.3",
-		"gulp-sass": "^4.0.1",
-		"gulp-sourcemaps": "^2.6.4",
-		"gulp-uglify": "^3.0.1",
-		"gulp-useref": "^3.1.5",
-		"run-sequence": "^2.2.1"
-	},
-	"dependencies": {
-		"bootstrap": "^4.1.3",
-		"jquery": "^3.3.1",
-		"popper.js": "^1.14.3",
-		"svgxuse": "^1.2.6"
-	}
+  "name": "metro-transit",
+  "version": "1.0.1",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "transpile": "npx babel src --out-dir dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mtbotherd/Redesign2019.git"
+  },
+  "author": "Rich Bothe",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/mtbotherd/Redesign2019.git/issues"
+  },
+  "homepage": "https://github.com/mtbotherd/Redesign2019.git#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cache": "^1.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4",
+    "run-sequence": "^2.2.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
+    "svgxuse": "^1.2.6"
+  }
 }
