--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
+        "date-input-polyfill": "^2.14.0",
         "jquery": "^3.3.1",
+        "jquery-datetimepicker": "^2.5.21",
         "popper.js": "^1.14.3",
-        "svgxuse": "^1.2.6"
+        "svgxuse": "^1.2.6",
+        "time-input-polyfill": "^1.0.9"
     }
 }
